# Talon

./: .dockerignore  .gitignore  Dockerfile  README.md  build_onefile.sh  docker-compose.sandbox.yml  pyproject.toml  requirements.txt  talon_v1.py
.cursor/rules/: auto-push-after-updates.mdc
